--- a/templates/feed/contact_us.html
+++ b/templates/feed/contact_us.html
@@ -8,9 +8,9 @@
 
 {% block body_block %}
     <!--very cool body, asking whoever clicked on this section to please not contact us very kindly :)-->
-    
-<div style="height: 500px;">
-    <span style="font-size: 20px; font-weight: 400;">Here is contact us page.</span>
-	<span style="font-size: 20px; font-weight: 400;">Currently there is no way of contacting us.</span>
+    <link rel="stylesheet" href="/static/css/about.css" type="text/css">
+<div class="block">
+    <span class = "aboutText">Here is contact us page.</span>
+	<span class = "aboutText">Currently there is no way of contacting us.</span>
 </div>
 {% endblock %}
