--- a/templates/feed/help.html
+++ b/templates/feed/help.html
@@ -7,8 +7,9 @@
 
 
 {% block body_block %}
-<div style="height: 500px;">
-    <span style="font-size: 30px; font-weight: 900;">Here is Help page:</span>
+<link rel="stylesheet" href="/static/css/about.css" type="text/css">
+<div class="block">
+    <span class="helpText">Here is Help page:</span>
 	<ul>
 		<li> Click on your account to see your posts, attempts, followers and who you are  </li>
 		<li> Clicking on the big 'DITry' button takes you back to the homepage </li>
