--- a/templates/feed/login.html
+++ b/templates/feed/login.html
@@ -38,7 +38,7 @@
                 </div>
 
                 {% for message in messages %}
-                    <small style="color:red;"> {{ message }}</small>
+                    <small class = "status-message"> {{ message }}</small>
                 {% endfor %}
 
                 <div class="button">
