--- a/templates/feed/password_change.html
+++ b/templates/feed/password_change.html
@@ -25,7 +25,7 @@
                     </div>
 
                     {% if field.errors %}
-                        <small style="color:red;"> {{ field.errors }}</small>
+                        <small class = "status-message"> {{ field.errors }}</small>
                     {% endif %}
 
                 {% endfor %}
