--- a/templates/feed/password_reset_form.html
+++ b/templates/feed/password_reset_form.html
@@ -33,7 +33,7 @@
 
                     {% for field in form %}
                         {% for error in field.errors %}
-                            <small style="color:red;">{{ error }}</small>
+                            <small class = "status-message">{{ error }}</small>
                         {% endfor %}
                     {% endfor %}
 
