--- a/static/css/personalPage.css
+++ b/static/css/personalPage.css
@@ -1,4 +1,4 @@
-#page  #frame{
+#page #frame {
     width: 900px;
     border-radius: 30px;
     display: flex;
@@ -8,22 +8,29 @@
     align-items: center;
 }
 
-#page  #frame  #author{
+#page #frame #author {
     display: flex;
     flex-direction: row;
 }
 
-#page  #frame  #author a #authorProfile{ 
+#page #frame #author a #authorProfile {
     width: 120px;
     border: 20px solid rgb(255, 255, 255);
 }
 
-#page  #frame  #author #authorDetail{
+#page #frame #author a .authorPic {
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+#page #frame #author #authorDetail {
     border: 20px solid rgb(255, 255, 255);
     width: 240px;
 }
 
-#page  #frame  #author #authorDetail #name{
+#page #frame #author #authorDetail #name {
     word-wrap: break-word;
     font-size: 30px;
     font-weight: 900;
@@ -31,44 +38,44 @@
     color: black;
 }
 
-#page  #frame  #author #authorDetail #followFrame{
+#page #frame #author #authorDetail #followFrame {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     width: 220px;
 }
 
-#page  #frame  #author #authorDetail #followFrame .follow{
+#page #frame #author #authorDetail #followFrame .follow {
     border-bottom: 5px solid #ffffff;
 }
 
-#page  #frame  #author #authorDetail #followFrame .follow a{
+#page #frame #author #authorDetail #followFrame .follow a {
     text-decoration: none;
     color: #000000;
 }
 
-#page  #frame  #author #authorDetail #followFrame .follow a:hover{
+#page #frame #author #authorDetail #followFrame .follow a:hover {
     color: #4F81FF;
 }
 
-#page  #frame  #author #authorDetail #location{
+#page #frame #author #authorDetail #location {
     display: flex;
     align-items: center;
 }
 
-#page  #frame  #author #authorDetail #location #locationText{
+#page #frame #author #authorDetail #location #locationText {
     border: 10px solid rgb(255, 255, 255);
     opacity: 0.5;
     font-size: 8px;
 }
 
-#page  #frame  #author #authorDetail #authorOpera{
+#page #frame #author #authorDetail #authorOpera {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-#page  #frame  #author #authorDetail #authorOpera .button{
+#page #frame #author #authorDetail #authorOpera .button {
     border: 5px solid;
     border-left: 26px solid;
     border-right: 26px solid;
@@ -78,32 +85,32 @@
     border-color: #16A082;
     color: #ffffff;
     text-decoration: none;
-    background-color:#16A082 ;
+    background-color: #16A082;
     font-weight: 900;
 }
 
-#page  #frame  #author #authorDetail #authorOpera .button:hover{
+#page #frame #author #authorDetail #authorOpera .button:hover {
     box-shadow: rgb(119, 119, 119) 0px 5px 10px 1px;
 }
 
-#page  #frame #paFrame{
+#page #frame #paFrame {
     width: 350px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-#page  #frame #paFrame{
+#page #frame #paFrame {
     border: 20px solid rgb(255, 255, 255);
 }
 
-#page  #frame #paFrame #postButton{
+#page #frame #paFrame #postButton {
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 
-#page  #frame #paFrame #postButton a{
+#page #frame #paFrame #postButton a {
     letter-spacing: 0.5px;
     text-decoration: none;
     font-size: 20px;
@@ -111,7 +118,7 @@
     color: #707070;
 }
 
-#page  #frame #paFrame #postButton #buttonUnderline1{
+#page #frame #paFrame #postButton #buttonUnderline1 {
     background-color: #4F81FF;
     width: 70px;
     height: 2px;
@@ -119,7 +126,7 @@
     border-radius: 20px;
 }
 
-#page  #frame #paFrame #attemptsButton a{
+#page #frame #paFrame #attemptsButton a {
     letter-spacing: 0.5px;
     text-decoration: none;
     font-size: 20px;
@@ -127,17 +134,18 @@
     color: #707070;
 }
 
-#page  #frame #paFrame #postButton a:hover,#page  #frame #paFrame #attemptsButton a:hover{
+#page #frame #paFrame #postButton a:hover,
+#page #frame #paFrame #attemptsButton a:hover {
     color: #000000;
 }
 
-#page  #frame #folderAndPics{
+#page #frame #folderAndPics {
     width: 1100px;
     display: flex;
     flex-direction: row;
 }
 
-#page  #frame #folderAndPics #folders{
+#page #frame #folderAndPics #folders {
     width: 300px;
     border-radius: 30px;
     border: 2px solid rgb(255, 255, 255);
@@ -147,7 +155,7 @@
     align-items: center;
 }
 
-#page  #frame #folderAndPics #folders .foldersText{
+#page #frame #folderAndPics #folders .foldersText {
     letter-spacing: 0.5px;
     text-decoration: none;
     font-size: 25px;
@@ -157,39 +165,39 @@
     border-left: 20px solid #ffffff;
 }
 
-#page  #frame #folderAndPics #folders #customFrame{
+#page #frame #folderAndPics #folders #customFrame {
     width: 200px;
     height: 700px;
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
-    align-items:center;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#page  #frame #folderAndPics #folders #customFrame .folder{
+#page #frame #folderAndPics #folders #customFrame .folder {
     align-self: flex-start;
     border-bottom: 30px solid rgb(255, 255, 255);
 }
 
-#page  #frame #folderAndPics #folders #customFrame .folder .icon{
+#page #frame #folderAndPics #folders #customFrame .folder .icon {
     border: 11px solid rgb(255, 255, 255);
     border-top: 0px solid rgb(255, 255, 255);
     border-bottom: 0px solid rgb(255, 255, 255);
     border-radius: 50%;
 }
 
-#page  #frame #folderAndPics #folders #customFrame .folder a{
+#page #frame #folderAndPics #folders #customFrame .folder a {
     border-left: 20px solid rgb(255, 255, 255);
     color: #707070;
     font-weight: 600;
     text-decoration: none;
 }
 
-#page  #frame #folderAndPics #folders #customFrame .folder a:hover{
+#page #frame #folderAndPics #folders #customFrame .folder a:hover {
     color: #000000;
 }
 
-#page  #frame #folderAndPics #folders #customFrame .operaFrame{
+#page #frame #folderAndPics #folders #customFrame .operaFrame {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -197,43 +205,59 @@
     width: 150px;
 }
 
-#page  #frame #folderAndPics #folders #customFrame .operaFrame .addDeleteCat .addDeleteCatButton{
+#page #frame #folderAndPics #folders #customFrame .operaFrame .addDeleteCat .addDeleteCatButton {
     width: 50px;
 }
 
-#page  #frame #folderAndPics #folders #customFrame #catFrame{
+#page #frame #folderAndPics #folders #customFrame #catFrame {
     width: 500px;
     height: 200px;
 }
 
-#page  #frame #folderAndPics #picFrame{
+#page #frame #folderAndPics #picFrame {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#page  #frame #folderAndPics #picFrame .image{
+#page #frame #folderAndPics #picFrame .image {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-left: 100px solid rgb(255, 255, 255);
 }
 
-#page  #frame #folderAndPics #picFrame .image a img{
+#page #frame #folderAndPics #picFrame .image a img {
     width: 400px;
     border: 1.5px solid rgb(255, 255, 255);
     border-radius: 30px;
 }
 
-#page  #frame #folderAndPics #picFrame .image a img:hover{
+#page #frame #folderAndPics #picFrame .image a img:hover {
     border: 1.5px solid #4F81FF;
     border-radius: 30px;
 }
 
-#page  #frame #folderAndPics #picFrame #addPost{
+#page #frame #folderAndPics #picFrame #addPost {
     border: 30px solid rgb(255, 255, 255);
 }
 
-#page  #frame #folderAndPics #picFrame #addPost #addPostButton{
+#page #frame #folderAndPics #picFrame #addPost #addPostButton {
     width: 50px;
+}
+
+#page #frame #folderAndPics #folders #customFrame .folder .icon1 {
+    border: 11px solid rgb(255, 255, 255);
+    border-top: 0px solid rgb(255, 255, 255);
+    border-bottom: 0px solid rgb(255, 255, 255);
+    border-radius: 50%;
+    border-color: rgb(251, 255, 0)
+}
+
+#page #frame #folderAndPics #folders #customFrame .folder .icon2 {
+    border: 11px solid rgb(255, 255, 255);
+    border-top: 0px solid rgb(255, 255, 255);
+    border-bottom: 0px solid rgb(255, 255, 255);
+    border-radius: 50%;
+    border-color: rgb(0, 255, 13)
 }
