--- a/templates/feed/about.html
+++ b/templates/feed/about.html
@@ -7,8 +7,9 @@
 
 
 {% block body_block %}
-<div style="height: 500px;">
-    <span style="font-size: 20px; font-weight: 400;">This website allows you to upload pictures of your drafts, food creations or DIY ideas.
+<link rel="stylesheet" href="/static/css/about.css" type="text/css">
+<div class = "block">
+    <span class = "aboutText">This website allows you to upload pictures of your drafts, food creations or DIY ideas.
 	You can also view posts by other users which you can save in folders and you can follow other users or categories.</span>
 </div>
 {% endblock %}
