--- a/templates/feed/addPost.html
+++ b/templates/feed/addPost.html
@@ -55,7 +55,7 @@
             
                     {% for field in form %}
                     {% for error in field.errors %}
-                        <small style="color:red;">{{ error }}</small>
+                        <small class = "error-message">{{ error }}</small>
                     {% endfor %}
                     {% endfor %}
                     <div class="button">
