--- a/templates/feed/personalPage.html
+++ b/templates/feed/personalPage.html
@@ -13,9 +13,9 @@
         <div id="author">
             <a href="">
                 {% if user.profile_picture %}
-                    <img id="authorProfile" src="{{user.profile_picture.url}}" alt="authorProfile" style = "object-fit: cover;width:100px; height:100px;border-radius: 50%;"/>
+                    <img class="authorPic" src="{{user.profile_picture.url}}" alt="authorProfile" />
                 {% else %}
-                    <img id="authorProfile" src="{{ MEDIA_URL }}profile.png" alt="authorProfile" style = "object-fit: cover;width:100px; height:100px;border-radius: 50%;"/>
+                    <img class="authorPic" src="{{ MEDIA_URL }}profile.png" alt="authorProfile"/>
                 {%endif%}
             </a>
             <div id="authorDetail">
@@ -59,7 +59,7 @@
                         <div class="folderFrame">
                             <span class="foldersText">Folders</span>
                             <div class="folder">
-                                <a href="" style="border-color:rgb(251, 255, 0)"  class="icon"></a>
+                                <a href="{% url 'feed:show_folder' user.username folder.id%}" class="icon1"></a>
                                 <a href="{% url 'feed:show_folder' user.username folder.id%}"><span>{{ folder.name }}</span></a>
                             </div>
                             <div class="operaFrame">
@@ -81,8 +81,8 @@
                         {% for post in post_row %}
                         <td>
                             <div class="picLine">
-                                <div class="pic" style="height: 600px;">
-                                    <a href="{% url 'feed:show_post' post.id%}"><img class="image" style="width: 365; height: 600px; object-fit: cover;"
+                                <div class="picBackground">
+                                    <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage"
                                         src="{{ post.picture.url }}" alt="Image of {{ post.title }}"></a>
                                     <div class="allPicOpera">
                                                 {{ post.title }}
