--- a/templates/feed/show_folder.html
+++ b/templates/feed/show_folder.html
@@ -6,37 +6,59 @@
 {% endblock %}
 
 {% block body_block %}
-    {% if post in posts %}
-        <td>
-            <div class="picLine">
-                <div class="picBackground">
-                    <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage"
-                        src="{{ post.picture.url }}" alt="Image of {{ post.title }}">
-                    <div class="allPicOpera">
-                        {% if post.creator.UserProfile.profile_picture %}
-                        <a href=""><img class = "authPic"
-                                src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
-                                <div class="followPic"><img src="{% static 'images/followPic.png' %}"
-                                    alt="followPic" /></div>
-                            </a>			
-                        {% else %}
-                            <a href=""><img class = "authPic"
-                                src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
-                                    <div class="followPic"><img src="{% static 'images/followPic.png' %}"
-                                        alt="followPic" /></div>
+<script>
+    user_id = {{user.id}};
+    var urlConstruct = "{% url 'feed:get_likes' %}";
+    
+</script>
+<div id="postPics">
+    
+    <table>
+    {% if posts %}
+    {% csrf_token %}
+        {% for post_row in posts %}
+        <tr>
+            {% for post in post_row %}
+                <td>
+                <div class="picLine">
+                    <div class="picBackground" >
+                        <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage" 
+                            src="{{ post.picture.url }}" alt="Image of {{ post.title }}"></a>
+                        <div class="allPicOpera">
+                            <a href="{% url 'feed:account' post.creator.username %}">
+                            {% if post.creator.profile_picture %}
+                            <img class = "authPic"
+                                    src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
+                                    
+                                        
+                            {% else %}
+                                <img class = "authPic"
+                                    src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
+                                        
+                                
+                                
+                            {% endif %}
                             </a>
-                        {% endif %}
-                        <a href="" class="authorName">{{ post.creator.username }}</a>
-                        {% if user.is_authenticated %}
-                            <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
-                            <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
-                                alt="chat-bubble-dots" /></a>
-                    {% endif %}
+                            <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
+                            {% if user.is_authenticated %}
+                                <a href = "{% url 'feed:like_post' post.id %}">
+                                    
+                                    <!-- needs to be taken from model (whether liked or not) to decide url -->
+                                    <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
+
+                                <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                                    alt="chat-bubble-dots" /></a>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
-            </div>
-        </td>	
+                </td>
+                {% endfor %}
+            </tr>
+        {% endfor %}
     {% else %}
         No posts to show.
     {% endif %}
+        </table>
+    </div>
 {% endblock %}
