--- a/static/css/home.css
+++ b/static/css/home.css
@@ -62,7 +62,7 @@
 }
 
 #page #postPics {
-    width: 1100px;
+    width: 90%;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -178,4 +178,10 @@
 #page #paging a:hover,
 #page #paging span:hover {
     text-decoration: underline;
+}
+
+.wrapper {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: center;
 }
