--- a/static/css/personalPage.css
+++ b/static/css/personalPage.css
@@ -1,5 +1,5 @@
 #page #frame {
-    width: 900px;
+    width: 90%;
     border-radius: 30px;
     display: flex;
     flex-direction: column;
@@ -140,7 +140,7 @@
 }
 
 #page #frame #folderAndPics {
-    width: 1100px;
+    width: 90%;
     display: flex;
     flex-direction: row;
 }
