--- a/templates/feed/categories.html
+++ b/templates/feed/categories.html
@@ -12,49 +12,47 @@
     
 </script>
 <div id="postPics">
-    {% if posts %}
-    {% csrf_token %}
-        <table>
-        {% for post_row in posts %}
-            <tr>
-                {% for post in post_row %}
-                <td>
-                    <div class="picLine">
-                        <div class="picBackground" >
-                            <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage" 
-                                src="{{ post.picture.url }}" alt="Image of {{ post.title }}">
-                            <div class="allPicOpera">
-                                <a href="{% url 'feed:account' post.creator.username %}">
-                                    {% if post.creator.profile_picture %}
-                                    <img class = "authPic"
-                                            src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
-                                            
-                                                
-                                    {% else %}
+    <div class = "wrapper">
+        {% if posts %}
+        {% csrf_token %}
+        
+            {% for post in posts %}
+                
+                        <div class="picLine">
+                            <div class="picBackground" >
+                                <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage" 
+                                    src="{{ post.picture.url }}" alt="Image of {{ post.title }}">
+                                <div class="allPicOpera">
+                                    <a href="{% url 'feed:account' post.creator.username %}">
+                                        {% if post.creator.profile_picture %}
                                         <img class = "authPic"
-                                            src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
+                                                src="{{ post.creator.profile_picture.url }}" alt="profile picture" />
                                                 
-                                        
-                                        
+                                                    
+                                        {% else %}
+                                            <img class = "authPic"
+                                                src="{{ MEDIA_URL }}profile.png" alt="profile picture1" />
+                                                    
+                                            
+                                            
+                                        {% endif %}
+                                    </a>
+                                    <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
+                                    {% if user.is_authenticated %}
+                                        <a href = "{% url 'feed:like_post' post.id %}">
+                                            <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
+                                        <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
+                                            alt="chat-bubble-dots" /></a>
                                     {% endif %}
-                                </a>
-                                <a href="{% url 'feed:account' post.creator.username %}" class="authorName">{{ post.creator.username }}</a>
-                                {% if user.is_authenticated %}
-                                    <a href = "{% url 'feed:like_post' post.id %}">
-                                        <img class="heartButton" id="{{ post.id }}" width="25px"; src="{% static 'images/heart2.png' %}" alt="heart" /></a>
-                                    <a href=""><img src="{% static 'images/chat-bubble-dots.png' %}"
-                                        alt="chat-bubble-dots" /></a>
-                                {% endif %}
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </td>
-                {% endfor %}
-            </tr>
-        {% endfor %}
-        </table>
-    {% else %}
-        No {{ name }} posts yet.
-    {% endif %}
+                
+            {% endfor %}
+        
+        {% else %}
+            No {{ name }} posts yet.
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
