--- a/templates/feed/personalPage.html
+++ b/templates/feed/personalPage.html
@@ -75,11 +75,9 @@
             {% endif %}
         </div>
         <div id="postPics">
-            <table>
-                {% for post_row in posts %}
-                    <tr>
-                        {% for post in post_row %}
-                        <td>
+            <div class = "wrapper">
+                {% for post in posts %}
+                    
                             <div class="picLine">
                                 <div class="picBackground">
                                     <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage"
@@ -89,12 +87,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </td>
-                        {% endfor %}
-                    </tr>
+                       
                 
                 {% endfor %}
-                </table>
+                        </div>
         </div>
         {% endblock %}
     {% endif %}
