--- a/templates/feed/show_folder.html
+++ b/templates/feed/show_folder.html
@@ -12,14 +12,11 @@
     
 </script>
 <div id="postPics">
-    
-    <table>
+    <div class = "wrapper">
+   
     {% if posts %}
     {% csrf_token %}
-        {% for post_row in posts %}
-        <tr>
-            {% for post in post_row %}
-                <td>
+        {% for post in posts %}
                 <div class="picLine">
                     <div class="picBackground" >
                         <a href="{% url 'feed:show_post' post.id%}"><img class="coverImage" 
@@ -52,13 +49,11 @@
                         </div>
                     </div>
                 </div>
-                </td>
-                {% endfor %}
-            </tr>
+                
         {% endfor %}
     {% else %}
         No posts to show.
     {% endif %}
-        </table>
     </div>
+</div>
 {% endblock %}
