fixed a bug where showPost.html cannot show the post description because the form was not saving the user input

--- a/templates/feed/addPost.html
+++ b/templates/feed/addPost.html
@@ -48,8 +48,8 @@
             
                         <div class="text-input">
                             <span class="input-label">Tell everyone what your picture is about</span>
-                            {{ form.comment }}
-                            {{ form.comment.errors }}
+                            {{ form.description }}
+                            {{ form.description.errors }}
                         </div>
                     </div>
             
