Add folder now works, we need to refactor personalPage so it doesnt do that page strecthing thing with the folder list, maybe shove it as an option?

--- a/templates/feed/add_folder.html
+++ b/templates/feed/add_folder.html
@@ -25,7 +25,7 @@
                         <div class="inputText">
                             <span class="input-box">Whats the folder name?</span>
                                 {{ form.title.errors }}
-                                {{ form.foldername }}
+                                {{ form.name }}
                         </div>
                     </div>
                     <div class="button">
