changed spacing between folders in css

--- a/static/css/personalPage.css
+++ b/static/css/personalPage.css
@@ -167,7 +167,7 @@
 
 #page #frame #folderAndPics #folders #customFrame {
     width: 200px;
-    height: 700px;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
