preparing changes, to add post to folder

--- a/static/css/picDetail.css
+++ b/static/css/picDetail.css
@@ -111,6 +111,7 @@
 #page #detail #frame #authorCom #author #authorDetail #authorOpera {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
@@ -126,6 +127,7 @@
     text-decoration: none;
     background-color: #16A082;
     font-weight: 900;
+    margin: 2px;
 }
 
 #page #detail #frame #authorCom #author #authorDetail #authorOpera .button:hover {
