--- a/static/css/addPost.css
+++ b/static/css/addPost.css
@@ -188,7 +188,8 @@ span.input-label {
     border-right: 15px;
     border-left: 15px;
     border-radius: 7px;
-    border-color: #e9e9e9;
+    border-color: #ffffff;
+    padding-right: 20px
 }
 
 .text-input input {
